--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -12,107 +12,103 @@
         android:padding="10dp"
         android:id="@+id/textBar"
         android:orientation="horizontal"
-        android:background="@color/colorPrimary"
         android:layout_height="wrap_content">
+
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="18dp"
+            android:layout_height="33dp"
             android:onClick="cancel"
-            android:src="@drawable/cancel"/>
+            android:src="@drawable/cancel" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#FFFFFF"
-            android:textSize="20dp"
             android:layout_alignParentEnd="true"
+            android:onClick="save"
             android:text="Save"
-            android:onClick="save"/>
+            android:textColor="#6D6D6D"
+            android:textSize="20dp"
+            android:textStyle="bold" />
     </RelativeLayout>
+
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:padding="10dp"
-        android:textSize="22dp"
-        android:background="@color/colorPrimary"
+        android:textSize="24dp"
+        android:background="@drawable/round"
         android:inputType="textPersonName"
-        android:textColor="#FFFFFF"
+        android:textColor="#6272DF"
         android:hint="Title"
-        android:textColorHint="#DFDFDF"
+        android:textColorHint="#6272DF"
         android:ems="10"
         android:textStyle="bold"
         android:id="@+id/title" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:padding="10dp"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/clock"/>
-        <TextView
-            android:layout_width="match_parent"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:src="@drawable/date"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="viewEnd"
+            android:orientation="vertical"
+            android:padding="5dp">
+        <TextView
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="viewStart"
             android:onClick="setDate"
-            android:textSize="20dp"
+            android:textSize="18dp"
+            android:textColor="#6272DF"
             android:layout_weight="1"
             android:ems="10"
             android:id="@+id/date" />
         <TextView
-            android:textSize="20dp"
-            android:layout_width="match_parent"
-            android:textAlignment="viewEnd"
+            android:layout_width="140dp"
+            android:textAlignment="viewStart"
+            android:textSize="18dp"
+            android:textColor="#6272DF"
             android:layout_height="wrap_content"
             android:onClick="setTime"
             android:layout_weight="2"
             android:ems="10"
             android:id="@+id/time" />
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:padding="10dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        </LinearLayout>
 
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/label"/>
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:src="@drawable/categories"/>
+
         <Spinner
             android:id="@+id/spinner2"
             android:layout_width="match_parent"
-            android:gravity="center_horizontal"
-            android:layout_height="wrap_content" />
-        <!---
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Categorie"
-            android:gravity="center_horizontal"
-            android:onClick="setColor"
-            android:textSize="20dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:id="@+id/categorie" />
-            -->
+            android:gravity="center_vertical"
+            android:layout_height="match_parent"/>
+
     </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:inputType="textMultiLine"
         android:hint="To do..."
+        android:textColorHint="#6272DF"
+        android:backgroundTint="#6272DF"
         android:ems="10"
         android:id="@+id/txt" />
 
