--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -7,27 +7,27 @@
         <LinearLayout
         android:id="@+id/bottom_wrapper"
         android:layout_width="120dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#2277FF"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/doneB"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:onClick="doneClick"
             android:src="@drawable/done" />
 
         <ImageView
             android:id="@+id/todoB"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_width="13dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:onClick="todoClick"
-            android:src="@drawable/cancel" />
+            android:src="@drawable/cancelwhite" />
         <!--What you want to show-->
     </LinearLayout>
     <!-- Bottom View End-->
