fix notification issue

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/cat"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Task Reminder"
+                android:text="@string/task_reminder"
                 android:textAlignment="center"
                 android:gravity="center"
                 android:textColor="#FFFFFF"
@@ -271,6 +271,7 @@
             android:background="#EFEFEF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="logout"
             android:paddingLeft="8dp">
 
             <ImageView
