add onclick event on logout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -270,6 +270,7 @@
                 android:background="#EFEFEF"
                 android:orientation="horizontal"
                 android:paddingLeft="8dp"
+                android:onClick="logout"
                 android:layout_alignParentBottom="true">
 
                 <ImageView
