Revert "change add item top items color"
This reverts commit 51f017205de9fc944e08fbc4e26795377403d0f3.

--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -18,7 +18,6 @@
             android:layout_width="18dp"
             android:layout_height="33dp"
             android:onClick="cancel"
-            android:tint="@color/white"
             android:src="@drawable/cancel" />
 
         <TextView
@@ -27,7 +26,7 @@
             android:layout_alignParentEnd="true"
             android:onClick="save"
             android:text="Save"
-            android:textColor="@color/white"
+            android:textColor="#6D6D6D"
             android:textSize="20dp"
             android:textStyle="bold" />
     </RelativeLayout>
